--- a/ExplicitIntent/app/src/main/res/layout/layout_selection.xml
+++ b/ExplicitIntent/app/src/main/res/layout/layout_selection.xml
@@ -22,6 +22,18 @@
         app:layout_constraintStart_toEndOf="@+id/option_3"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/btn_next"
+        android:layout_width="270dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginBottom="107dp"
+        android:src="@drawable/question1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/option_4" />
+
     <TextView
         android:id="@+id/option_3"
         android:layout_width="0dp"
@@ -36,7 +48,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/option_2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.539" />
 
     <TextView
         android:id="@+id/option_4"
@@ -68,18 +81,6 @@
         app:layout_constraintBaseline_toBaselineOf="@+id/option_2"
         app:layout_constraintEnd_toStartOf="@+id/option_4"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/btn_next"
-        android:layout_width="200dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginLeft="3dp"
-        android:layout_marginBottom="107dp"
-        android:src="@drawable/question1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/option_4" />
 
 
 </android.support.constraint.ConstraintLayout>
